GNOME Bugzilla – Bug 732465
Fix build on x64 Visual C++ builds
Last modified: 2014-06-30 13:11:21 UTC
Hi, Commit c4fc3aa5 ("valgrind.h: Update to latest upstream version") unfortunately broke the build of GLib on x64 Visual C++ as the latest valgrind.h that is shipped with GLib currently requires the use of inline assembly code for it to be supported. This, as a result, causes a compiler error (#error Unsupported compiler.) in valgrind.h line 449, when GLib is being built with x64 editions of Visual C++, as x64 Visual C++ does not support the use of inline assembly code.
Created attachment 279584 [details] [review] glib/valgrind.h: Disable valigrind features on x64 Visual C++ builds Hi, This is my patch to deal with the issue, until valgrind.h can work with x64 Visual C++ builds, by disabling valgrind features using the macro NVALGRIND on x64 Visual C++ builds. With blessings, thank you!
Review of attachment 279584 [details] [review]: Looks fine, thanks!
Hi Colin, Thanks for the reviews, the patch was pushed as 72de9834. With blessings!
Hopefully we don't forget about this next time we upgrade...